--- a/infra/caddy/docker-compose.yaml
+++ b/infra/caddy/docker-compose.yaml
@@ -10,6 +10,13 @@ services:
       DOMAIN_HOST: ${DOMAIN_HOST}
       DOMAIN_PROMETHEUS: ${DOMAIN_PROMETHEUS}
       DOMAIN_GRAFANA: ${DOMAIN_GRAFANA}
+      DOMAIN_GITEA: ${DOMAIN_GITEA}
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:2019/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
     ports:
       - "80:80"
       - "443:443"
