--- a/infra/monitoring/prometheus/prometheus.yaml
+++ b/infra/monitoring/prometheus/prometheus.yaml
@@ -9,3 +9,7 @@ scrape_configs:
   - job_name: caddy
     static_configs:
       - targets: ['caddy:2019']
+
+  - job_name: node_exporter
+    static_configs:
+      - targets: ['node_exporter:9100']
