--- a/infra/caddy/docker-compose.yaml
+++ b/infra/caddy/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       DOMAIN_PROMETHEUS: ${DOMAIN_PROMETHEUS}
       DOMAIN_GRAFANA: ${DOMAIN_GRAFANA}
       DOMAIN_GITEA: ${DOMAIN_GITEA}
+      DOMAIN_N8N: ${DOMAIN_N8N}
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:2019/health"]
       interval: 30s
