--- a/infra/caddy/docker-compose.yaml
+++ b/infra/caddy/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       CADDY_EMAIL: ${CADDY_EMAIL}
       CADDY_BASIC_AUTH: ${CADDY_BASIC_AUTH}
+      DOMAIN_INTRO_SITE: ${DOMAIN_INTRO_SITE}
       DOMAIN_HOST: ${DOMAIN_HOST}
       DOMAIN_PROMETHEUS: ${DOMAIN_PROMETHEUS}
       DOMAIN_GRAFANA: ${DOMAIN_GRAFANA}
