--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,18 +6,64 @@ on:
       - main
 
 jobs:
-  deploy:
+  validate:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-
-      # ---- VALIDATION PHASE ----
-      - name: Install Docker Compose
+        
+      - name: Install Docker
         run: |
+          set -e
+          
+          echo ">$> Removing older docker versions"
+          sudo apt-get remove -y docker docker-engine docker.io containerd runc || true
+      
+          echo ">$> Installing docker ..."
           sudo apt-get update
-          sudo apt-get install -y docker-compose-plugin
+          sudo apt-get install -y \
+            ca-certificates \
+            curl \
+            gnupg
+      
+          sudo install -m 0755 -d /etc/apt/keyrings
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | \
+            sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+          sudo chmod a+r /etc/apt/keyrings/docker.gpg
+      
+          echo \
+            "deb [arch=$(dpkg --print-architecture) \
+            signed-by=/etc/apt/keyrings/docker.gpg] \
+            https://download.docker.com/linux/ubuntu \
+            $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+      
+          sudo apt-get update
+      
+          sudo apt-get install -y \
+            docker-ce \
+            docker-ce-cli \
+            containerd.io \
+            docker-buildx-plugin \
+            docker-compose-plugin
+      
+          docker compose version
+
+      - name: Verify Docker
+        run: |
+          set -e
+      
+          echo ">$> Checking Docker binary..."
+          docker --version
+      
+          echo ">$> Checking Docker daemon..."
+          docker info >/dev/null
+      
+          echo ">$> Checking Docker Compose plugin..."
+          docker compose version
+      
+          echo ">$> Docker is installed, running, and usable."
+        
 
       - name: Validate docker-compose files
         run: |
@@ -28,8 +74,13 @@ jobs:
             docker compose -f "$file" config >/dev/null
           done
           echo ">$> All docker-compose files are valid."
+        
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      # ---- DEPLOY PHASE ----
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
