--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -77,6 +77,7 @@ jobs:
         
   sync:
     runs-on: ubuntu-latest
+    needs: validate
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
