--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,7 +63,6 @@ jobs:
           docker compose version
       
           echo ">$> Docker is installed, running, and usable."
-        
 
       - name: Validate docker-compose files
         run: |
@@ -100,4 +99,4 @@ jobs:
       - name: Verify files on EC2
         run: |
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_SSH_HOST_IP }} \
-            "ls -la ${{ secrets.EC2_TARGET_DIR }}"
+            "ls -lRa ${{ secrets.EC2_TARGET_DIR }}"
