--- a/infra/caddy/docker-compose.yaml
+++ b/infra/caddy/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   caddy:
     image: caddy:latest
     container_name: caddy
-    restart: unless-stopped
+    restart: on-failure:2
     environment:
       CADDY_EMAIL: ${CADDY_EMAIL}
       CADDY_BASIC_AUTH: ${CADDY_BASIC_AUTH}
