--- a/infra/monitoring/docker-compose.yaml
+++ b/infra/monitoring/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
-    restart: unless-stopped
+    restart: on-failure:2
     command:
       - "--config.file=/etc/prometheus/prometheus.yaml"
     healthcheck:
@@ -13,6 +13,7 @@ services:
       retries: 3
       start_period: 30s
     volumes:
+      - ./prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml
       - prometheus_data:/etc/prometheus
     networks:
       - edge_net
@@ -21,7 +22,7 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
-    restart: unless-stopped
+    restart: on-failure:2
     environment:
       GF_SECURITY_ADMIN_USER: ${GRAFANA_ADMIN_USER}
       GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_ADMIN_PASSWORD}
@@ -40,7 +41,7 @@ services:
   node_exporter:
     image: prom/node-exporter:latest
     container_name: node_exporter
-    restart: unless-stopped
+    restart: on-failure:2
     pid: "host"
     privileged: true
     command:
