--- a/infra/kuma/docker-compose.yaml
+++ b/infra/kuma/docker-compose.yaml
@@ -6,11 +6,7 @@ services:
     restart: on-failure:2
     # 3001
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "node -e \"require('http').get('http://127.0.0.1:3001', r => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))\""
-        ]
+      test: ["CMD", "extra/healthcheck"]
       interval: 30s
       timeout: 5s
       retries: 3
